  new data (thanks to David Rowe, University of Southampton, UK, for providing numerical data!)
    other/human body/blood/Rowe.yml
  new data (thanks to David Rowe for preparing data!)
    organic/C2H2Cl2 - dichloromethane/Bertie.yml
  updates
    other/mixed gases/air/Cyddor.yml: reference to calculation script
    other/human body/liver/Giannios.yml: references
  bug fixes
    added a new line at the end of each file (thanks to Thibault North!)
    page id's for Lemarchand's Au data changed to 'Lemarchand-3.96nm', 'Lemarchand-4.62nm', 'Lemarchand-5.77nm', and 'Lemarchand-11.7' (was simply 'Lemarcand' in all cases)
  miscellaneous
    colons in id's of several pages replaced by dashes (e.g. Mg:LiTaO3 -> Mg-LiTaO3)
    optical glasses re-arranged in library.yml

============================== 2017-09-05 ==============================
  
  new data
    main/Ag/Wu.yml  (thanks to Yanwen Wu, University of Texas at Austin, TX, USA!)
    other/perovskite/CH3NH3PbI3/Ball.yml (thanks to Sam Stranks, University of Cambridge, UK!)
    other/intermetallics/AuAl2/Supansomboon.yml (thans to Telmo for submitting data in YAML format!)
  new data (thanks to Tobias König for submitting data!)
    organic/(C2H4O)n - polyvinyl alcohol/Schnepf.yml
    main/ZnO/Stelling.yml
    main/MoO3/Stelling.yml
    other/mixed organic/PTB7-PC71BM/Stelling.yml
    other/mixed organic/P3HT-PC61BM/Stelling.yml
  new data (thanks to Ke Wang, Shenzhen University, China, for submitting data!)
    organic/C3H8O3 - glycerol/Wang.yml
    main/H2O/Wang.yml
    main/D2O/Wang.yml
    other/immersion oils/Leica Type F/Wang.yml
    other/immersion oils/Olympus IMMOIL-F30CC/Wang.yml
    other/immersion oils/Sigma Aldrich M5904/Wang.yml
  new data (thanks to Mattias "MK8J", for submitting data in YAML format via GitHub!)
    main/Si/Daub.yml
    main/Si/Green-2008.yml
    main/Si/Schinke.yml
    main/Si/Sik-25C.yml
    main/Si/Sik-250C.yml
    main/Si/Sik-500C.yml
    main/Si/Sik-700C.yml